kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mpcf-service
  namespace: mpcf
spec:
  ports:
    - name: app
      port: 80
      targetPort: 3000
  selector:
    app: mpcf
