kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mpcf-ingress
  namespace: mpcf
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: mpcf
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mpcf-service
                port:
                  number: 80
